--- a/pages/products.html
+++ b/pages/products.html
@@ -354,12 +354,50 @@
           <!-- search bar ends here -->
 
           <ul class="navbar-nav  justify-content-end">
-            <li class="nav-item d-flex align-items-center">
-              <a href="javascript:;" class="nav-link text-body font-weight-bold px-0">
+            <li class="nav-item d-flex align-items-center  "  id="SignInLink">
+              <a href="javascript:;" class="nav-link text-body font-weight-bold px-0 ">
                 <i class="fa fa-user me-sm-1"></i>
                 <span class="d-sm-inline d-none">Sign In</span>
               </a>
             </li>
+
+
+            <!-- Shubham- Sign In modal starts here  -->
+
+            <div class="modal fade" id="signInModalDialog" tabindex="-1" aria-labelledby="signInModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="signInModalLabel">Sign In</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <!-- Sign-in form -->
+                    <form id="signInForm">
+                      <div class="mb-3">
+                        <label for="email" class="form-label">Email or Phone</label>
+                        <input type="email" class="form-control" id="email" placeholder="Enter email or phone">
+                      </div>
+                      <div class="mb-3">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="Password">
+                      </div>
+                      <div class="d-flex flex-column">
+                        <button type="submit" class="btn btn-primary">Login</button>
+                        <div class="d-flex gap-2 " style="font-size: 14px;">
+                          <a href="#" class="forgot-password-link">Forgot Password ? </a>
+                          <a href="/register" class="forgot-password-link">Create an Account !</a>
+                        </div>
+                       
+                      </div>
+                     
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Sign In modal ends here -->
             <li class="nav-item d-xl-none ps-3 d-flex align-items-center">
               <a href="javascript:;" class="nav-link text-body p-0" id="iconNavbarSidenav">
                 <div class="sidenav-toggler-inner">
@@ -1157,13 +1195,13 @@
               (product) =>
                 product.product_name.toLowerCase().startsWith("men")
             );
-            console.log("FILTERED:",filteredProducts)
+            console.log("FILTERED:", filteredProducts)
             renderProducts(filteredProducts)
           } else {
             filteredProducts = products.filter((product) =>
               product.product_name.toLowerCase().includes(searchValue)
             );
-            console.log("FILTERED:",filteredProducts)
+            console.log("FILTERED:", filteredProducts)
             renderProducts(filteredProducts); // Render filtered products
           }
 
@@ -1238,7 +1276,7 @@
             const currentDate = new Date();
             const timeDifference = Math.abs(currentDate.getTime() - productDate.getTime());
             const daysDifference = Math.ceil(timeDifference / (1000 * 3600 * 24));
-            if (daysDifference <= 2) {
+            if (daysDifference <= 5) {
               productHTML += "<div class='d-flex gap-2'>";
               productHTML += "<p>" + product.category + "</p>";
               productHTML += "<p class='badge bg-primary'>New</p>";
@@ -1249,23 +1287,39 @@
               productHTML += "</div>";
             }
 
-            productHTML += "<div class='d-flex justify-content-between  '>";
-            productHTML += "<h5 >" + product.product_tittle + "</h5>";
-            productHTML += "<h5 >" + product.product_color1 + "</h5>";
+            productHTML += "<div class='d-flex justify-content-between  align-items-center '>";
+            productHTML += "<h6>" + product.product_tittle + "</h6>";
+            productHTML += "<div class='d-flex gap-1  pt-2'>";
+
+            productHTML += "<p class='text-sm '>" + product.product_color1 + " </p>";
+            if (product.product_color2!=="") {
+              productHTML += "<p class='text-sm'> | " + product.product_color2 + "</p>";
+            }
             productHTML += "</div>";
+            productHTML += "</div>";
+
 
             productHTML += "<div class='d-flex justify-content-between  '>";
             productHTML += "<h6 > Offer: " + product.offers + "%</h6>";
             productHTML += "<h6>₹" + product.product_price + "</h6>";
             productHTML += "</div>";
 
+            productHTML += "<div class='d-flex justify-content-between  '>";
+            productHTML += "<p class='text-sm' >" + product.material + "</p>";
+            productHTML += "<p class='text-sm'>" + product.product_brand + "</p>";
+            productHTML += "</div>";
+
+
             productHTML += "<div class='d-flex justify-content-between mb-1 '>";
             productHTML += "<span class='text-sm'><strong>Size:</strong> " + product.product_size + "</span>";
             productHTML += "<span class='text-sm'><strong>InStock:</strong> " + product.product_stock + "</span>";
             productHTML += "</div>";
 
+            const description = product.product_discription;
+            const truncatedDescription = description.length > 58 ? description.slice(0, 80) + '...' : description;
+
             productHTML +=
-              "<p class='mb-4 text-sm'>" + product.product_discription + "</p>";
+              "<p class='mb-4 text-sm mt-2'>" + truncatedDescription + "</p>";
 
             productHTML += "</div>";
 
