--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -223,7 +223,7 @@
             <li class="nav-item d-flex align-items-center">
               <a href="javascript:;" class="nav-link text-body font-weight-bold px-0">
                 <i class="fa fa-user me-sm-1"></i>
-                <span class="d-sm-inline d-none" >Sign In</span>
+                <span class="d-sm-inline d-none" id="userName" >User</span>
               </a>
             </li>
             <li class="nav-item d-xl-none ps-3 d-flex align-items-center">
@@ -995,6 +995,8 @@ window.addEventListener('load', function() {
  
    
 </script>
+
+<script src="../assets/js/dashboard.js"></script>
  
 
                       
