--- a/pages/billing.html
+++ b/pages/billing.html
@@ -224,7 +224,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="../pages/sign-up.html">
+          <a class="nav-link" href="../pages/sign-in.html">
             <div
               class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <svg width="12px" height="20px" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg"
